apps/prod/immich/httpRoute-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-redirect
  namespace: default
spec:
  parentRefs:
  - name: myrobertson-com-gateway
    sectionName: immich-http
    namespace: default
  hostnames: ["immich.myrobertson.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
