apps/prod/immich/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: default
spec:
  parentRefs:
  - name: myrobertson-com-gateway
    namespace: default
  hostnames: ["immich.myrobertson.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server
      port: 2283
